Convert TestBackgroundHiveSplitLoader to memory file system